[package]
name = "practice-wasm"
version = "0.1.0"
authors = ["Rajay Preddie <rajay.l.preddie@vanderbilt.edu>"]
description = "A demo project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/RajayPreddie/rust-wasm-demo"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"